# target_restruction

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  INTRODUCTION.md  NORMAL_ESTIMATION_METHODS.md  ODOMETRY_USAGE.md  QUICKSTART.md  README.md  VOXEL_OCTREE_GUIDE.md  package.xml
config/: default_params.yaml
include/: common_lib.h  feature.h  frame.h  target_reconstructor.h  visual_point.h  voxel_map.h
launch/: target_reconstruction.launch
msg/: BoundingBox.msg
rviz/: default.rviz
scripts/: get_local_pose.py
src/: feature.cpp  main.cpp  target_reconstructor.cpp  visual_point.cpp  voxel_map.cpp
