<?xml version="1.0"?>
<package format="2">
  <name>target_reconstruction</name>
  <version>0.1.0</version>
  <description>Static Target 3D Reconstruction using RGB-D Camera and Object Detection</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>vikit_common</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libboost-dev</build_depend>
  
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>libboost-dev</exec_depend>

  <export>
  </export>
</package>

